test/functions/diten/param_int_to_complex2.good
param_int_to_complex2.chpl:7: error: unresolved call 'foo(2)'
param_int_to_complex2.chpl:1: note: candidates are: foo(param c: complex)
