test/functions/diten/param_int_to_complex2.chpl
proc foo(param c: complex) {
  writeln("param");
}

param param_int: int = 2;

foo(param_int);
